--- a/components/markdown-styles.module.css
+++ b/components/markdown-styles.module.css
@@ -1,5 +1,28 @@
+.markdown h1 {
+  @apply text-4xl mt-12 mb-2 leading-snug font-bold;
+}
+
+.markdown h2 {
+  @apply text-2xl mt-8 mb-2 leading-snug font-bold;
+}
+
+.markdown h3 {
+  @apply text-4xl mt-12 mb-2 leading-snug font-bold;
+}
+
+.markdown h4 {
+  @apply text-2xl mt-8 mb-2 leading-snug font-bold;
+}
+
+.markdown h5 {
+  @apply text-2xl mt-8 mb-2 leading-snug font-bold;
+}
+
+.markdown h6 {
+  @apply text-2xl mt-8 mb-2 leading-snug font-bold;
+}
 .markdown {
-  @apply text-2xl leading-relaxed tracking-wider;
+  @apply text-2xl leading-snug tracking-normal;
 }
 
 .markdown p,
@@ -7,12 +30,4 @@
 .markdown ol,
 .markdown blockquote {
   @apply my-6;
-}
-
-.markdown h2 {
-  @apply text-4xl mt-12 mb-2 leading-snug font-bold;
-}
-
-.markdown h3 {
-  @apply text-2xl mt-8 mb-2 leading-snug font-bold;
 }
