--- a/components/markdown-styles.module.css
+++ b/components/markdown-styles.module.css
@@ -1,4 +1,4 @@
-.markdown h1 {
+/* .markdown h1 {
   @apply text-4xl mt-12 mb-2 leading-snug font-bold;
 }
 
@@ -30,4 +30,4 @@
 .markdown ol,
 .markdown blockquote {
   @apply my-6;
-}
+} */
