--- a/styles/index.css
+++ b/styles/index.css
@@ -165,7 +165,7 @@
 
 /* Write you own custom component styles here */
 body {
-    @apply h-screen max-w-full bg-black text-white font-sans font-normal antialiased;
+    @apply h-screen block max-w-full bg-black text-white font-sans font-normal antialiased;
 }
 
 h1 {
@@ -192,18 +192,20 @@ h6 {
     @apply text-base font-semibold leading-snug mt-8 mb-4 text-gray-300;
 }
 
-p, ul, ol {
+p,
+ul,
+ol {
     @apply text-xl leading-relaxed tracking-normal text-gray-100;
 }
 
 p {
-  @apply my-8;
+    @apply my-8;
 }
 
-ul, ol {
-  @apply mt-4 mb-2 ml-8
+ul,
+ol {
+    @apply mt-4 mb-2 ml-8;
 }
-
 
 li > p,
 li > ul,
@@ -232,36 +234,17 @@ em {
 }
 
 a {
-    @apply text-blue-400;
+    @apply text-blue-500 underline font-medium;
 }
 
-
-/* Blockquotes */
-blockquote {
-    @apply p-2 mx-6 mb-4 border-l-4 border-gray-400 italic;
-}
-blockquote > p {
-    @apply mb-0;
-}
-/* Tables */
-td,
-th {
-    @apply px-2 py-1 border border-gray-400;
-}
-tr:nth-child(odd) {
-    @apply bg-gray-100;
-}
-table {
-    @apply mb-6;
+:not(pre) > code {
+    @apply font-mono font-bold text-lg bg-orange-100 text-green-600 rounded px-1;
 }
 
-/* Wrap any inline highlights `that are really long`, but don't modify
-   the setting for codeblocks (inside ```), which are rendered in as:
-   <pre><code>...
-*/
-:not(pre) > code.language-text {
-    white-space: pre-line;
+pre {
+    @apply p-6 mb-12 text-left overflow-auto font-mono font-bold text-lg text-green-600 rounded;
 }
+
 .post-list-item {
     @apply mt-8 mb-12;
 }
