--- a/public/index.css
+++ b/public/index.css
@@ -1,156 +1,1 @@
-/* Thin */
-@font-face {
-    font-family: 'Campton';
-    src: url('./fonts/Campton-Thin/font.woff2') format('woff2'),
-        url('./fonts/Campton-Thin/font.woff') format('woff');
-    font-weight: 100;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Campton';
-    src: url('./fonts/Campton-ThinItalic/font.woff2') format('woff2'),
-        url('./fonts/Campton-ThinItalic/font.woff') format('woff');
-    font-weight: 100;
-    font-style: italic;
-}
-
-/* Extralight */
-@font-face {
-    font-family: 'Campton';
-    src: url('./fonts/Campton-ExtraLight/font.woff2') format('woff2'),
-        url('./fonts/Campton-ExtraLight/font.woff') format('woff');
-    font-weight: 200;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Campton';
-    src: url('./fonts/Campton-ExtraLightItalic/font.woff2') format('woff2'),
-        url('./fonts/Campton-ExtraLightItalic/font.woff') format('woff');
-    font-weight: 200;
-    font-style: italic;
-}
-
-/* Light */
-@font-face {
-    font-family: 'Campton';
-    src: url('./fonts/Campton-Light/font.woff2') format('woff2'),
-        url('./fonts/Campton-Light/font.woff') format('woff');
-    font-weight: 300;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Campton';
-    src: url('./fonts/Campton-LightItalic/font.woff2') format('woff2'),
-        url('./fonts/Campton-LightItalic/font.woff') format('woff');
-    font-weight: 300;
-    font-style: italic;
-}
-
-/* Book */
-@font-face {
-    font-family: 'Campton';
-    src: url('./fonts/Campton-Book/font.woff2') format('woff2'),
-        url('./fonts/Campton-Book/font.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Campton';
-    src: url('./fonts/Campton-BookItalic/font.woff2') format('woff2'),
-        url('./fonts/Campton-BookItalic/font.woff') format('woff');
-    font-weight: 400;
-    font-style: italic;
-}
-
-/* Medium */
-@font-face {
-    font-family: 'Campton';
-    src: url('./fonts/Campton-Medium/font.woff2') format('woff2'),
-        url('./fonts/Campton-Medium/font.woff') format('woff');
-    font-weight: 500;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Campton';
-    src: url('./fonts/Campton-MediumItalic/font.woff2') format('woff2'),
-        url('./fonts/Campton-MediumItalic/font.woff') format('woff');
-    font-weight: 500;
-    font-style: italic;
-}
-
-/* SemiBold */
-@font-face {
-    font-family: 'Campton';
-    src: url('./fonts/Campton-SemiBold/font.woff2') format('woff2'),
-        url('./fonts/Campton-SemiBold/font.woff') format('woff');
-    font-weight: 600;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Campton';
-    src: url('./fonts/Campton-SemiBoldItalic/font.woff2') format('woff2'),
-        url('./fonts/Campton-SemiBoldItalic/font.woff') format('woff');
-    font-weight: 600;
-    font-style: italic;
-}
-
-/* Bold */
-@font-face {
-    font-family: 'Campton';
-    src: url('./fonts/Campton-Bold/font.woff2') format('woff2'),
-        url('./fonts/Campton-Bold/font.woff') format('woff');
-    font-weight: 700;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Campton';
-    src: url('./fonts/Campton-BoldItalic/font.woff2') format('woff2'),
-        url('./fonts/Campton-BoldItalic/font.woff') format('woff');
-    font-weight: 700;
-    font-style: italic;
-}
-
-/* ExtraBold */
-@font-face {
-    font-family: 'Campton';
-    src: url('./fonts/Campton-ExtraBold/font.woff2') format('woff2'),
-        url('./fonts/Campton-ExtraBold/font.woff') format('woff');
-    font-weight: 800;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Campton';
-    src: url('./fonts/Campton-ExtraBoldItalic/font.woff2') format('woff2'),
-        url('./fonts/Campton-ExtraBoldItalic/font.woff') format('woff');
-    font-weight: 800;
-    font-style: italic;
-}
-
-/* Black */
-@font-face {
-    font-family: 'Campton';
-    src: url('./fonts/Campton-Black/font.woff2') format('woff2'),
-        url('./fonts/Campton-Black/font.woff') format('woff');
-    font-weight: 900;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Campton';
-    src: url('./fonts/Campton-BlackItalic/font.woff2') format('woff2'),
-        url('./fonts/Campton-BlackItalic/font.woff') format('woff');
-    font-weight: 900;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'LibreBaskerville';
-    font-weight: 400;
-    src: url('./fonts/LibreBaskerville-Regular.ttf');
-}
-
-@font-face {
-    font-family: 'LibreBaskerville';
-    font-weight: 600;
-    src: url('./fonts/LibreBaskerville-Bold.ttf');
-}
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
